--- a/Allstate RF Tune.ipynb
+++ b/Allstate RF Tune.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -15,16 +15,17 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
-    "train=pd.read_csv('../Allstate/data/train.csv')\n",
-    "test=pd.read_csv('../Allstate/data/test.csv')\n",
+    "train=pd.read_csv('../data/train.csv')\n",
+    "test=pd.read_csv('../data/test.csv')\n",
     "loss=train['loss']\n",
     "ids=train['id']\n",
     "#just lazy as I already munged in the data in Allstate Basic, so I reload the munged data.\n",
-    "train=pd.read_csv('../Allstate/data/train_ohe.csv')\n",
+    "train=pd.read_csv('../data/train_ohe.csv')\n",
     "train.drop(['loss'],inplace=True,axis=1)\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(train, loss, test_size=0.1, random_state=42)\n"
    ]
   },
   {
@@ -380,9 +381,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:   14.3s\n",
+      "[Parallel(n_jobs=4)]: Done  70 out of  70 | elapsed:   23.2s finished\n"
+     ]
+    }
+   ],
    "source": [
     "a=[5,8,10,15,20]\n",
     "depth=np.array([])\n",
@@ -427,6 +437,15 @@
     "plt.scatter(samp, MAE, alpha=0.5)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
